# CHARON

./: Cargo.toml  Dockerfile  README.md  README_OLD.md
docs/: ARCHITECTURE.md  CODE_GUIDELINES.md  FUNCTIONALITY.md  MANUAL.md
src/: action.rs  api.rs  app.rs  client.rs  lib.rs  main.rs  models.rs  state.rs  ui.rs  update.rs
tests/: test_client.rs  test_models.rs  test_state.rs  test_update.rs
