[package]
name = "CHARON"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.29.0"
ratatui = "0.30.0"
tokio = { version = "1", features = ["full"]}
reqwest = { version = "0.12", features = ["json", "blocking"] } 
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
