[package]
name = "charon"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.29.0"
ratatui = "0.30.0"
openssl = { version = "0.10", features = ["vendored"] }
tokio = { version = "1", features = ["full"]}
reqwest = { version = "0.12", features = ["json", "blocking"] } 
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
async-trait = "0.1.89"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
mockito = "1.2"
serial_test = "3.0"
